[package]
name = "ckb-pool"
version = "0.5.0-pre"
license = "MIT"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2018"

[dependencies]
ckb-core = { path = "../core" }
ckb-shared = { path = "../shared" }
ckb-chain-spec = { path = "../spec" }
ckb-notify = { path = "../notify" }
ckb-verification = { path = "../verification" }
faketime = "0.2.0"
numext-fixed-hash = { version = "0.1", features = ["support_rand", "support_heapsize", "support_serde"] }
lru-cache = { git = "https://github.com/nervosnetwork/lru-cache" }
linked-hash-map = { git = "https://github.com/nervosnetwork/linked-hash-map", rev = "df27f21" }
serde = "1.0"
serde_derive = "1.0"
log = "0.4"
fnv = "1.0.3"
crossbeam-channel = "0.3"
occupied-capacity = { path = "../util/occupied-capacity" }
stop-handler = { path = "../util/stop-handler" }

[dev-dependencies]
env_logger = "0.6"
ckb-db = { path = "../db" }
hash = {path = "../util/hash"}
ckb-chain = { path = "../chain" }
tempfile = "3.0"
numext-fixed-uint = { version = "0.1", features = ["support_rand", "support_heapsize", "support_serde"] }
