[package]
name = "ckb-pow"
version = "0.201.0-pre"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2024"
license = "MIT"
description = "PoW verification engines for CKB"
homepage = "https://github.com/nervosnetwork/ckb"
repository = "https://github.com/nervosnetwork/ckb"

[dependencies]
byteorder.workspace = true
ckb-types.workspace = true
ckb-hash.workspace = true
serde = { workspace = true, features = ["derive"] }
eaglesong.workspace = true
log.workspace = true
