[package]
name = "ckb-pow"
version = "1.0.1"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2024"
license = "MIT"
description = "Proof of Work (PoW) engine implementations"
homepage = "https://github.com/nervosnetwork/ckb"
repository = "https://github.com/nervosnetwork/ckb"

[dependencies]
byteorder.workspace = true
ckb-types.workspace = true
ckb-hash.workspace = true
serde = { workspace = true, features = ["derive"] }
eaglesong.workspace = true
log.workspace = true
