[package]
name = "ckb-protocol"
version = "0.11.0-pre"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2018"

[dependencies]
flatbuffers = "0.5.0"
flatbuffers-verifier = "0.1.9"
numext-fixed-hash = { version = "0.1", features = ["support_rand", "support_heapsize", "support_serde"] }
numext-fixed-uint = { version = "0.1", features = ["support_rand", "support_heapsize", "support_serde"] }
byteorder = "1.3.1"
ckb-core = { path = "../core" }
hash = { path = "../util/hash"}
siphasher = "0.3.0"
rand = "0.6"
ckb-util = { path = "../util" }
ckb-merkle-tree = { path = "../util/merkle-tree"}
failure = "0.1.5"
