[package]
name = "ckb-protocol"
version = "0.16.0-pre"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2018"
license = "MIT"

[dependencies]
flatbuffers = "0.6.0"
flatbuffers-verifier = "0.2.0"
numext-fixed-hash = { version = "0.1", features = ["support_rand", "support_heapsize", "support_serde"] }
numext-fixed-uint = { version = "0.1", features = ["support_rand", "support_heapsize", "support_serde"] }
byteorder = "1.3.1"
ckb-core = { path = "../core" }
ckb-hash = { path = "../util/hash"}
siphasher = "0.3.0"
rand = "0.6"
ckb-merkle-tree = { path = "../util/merkle-tree"}
failure = "0.1.5"
