[package]
name = "ckb-protocol"
version = "0.19.0-pre"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2018"
license = "MIT"

[dependencies]
flatbuffers = "0.6.0"
flatbuffers-verifier = "0.2.0"
numext-fixed-hash = { version = "0.1", features = ["support_rand", "support_heapsize", "support_serde"] }
numext-fixed-uint = { version = "0.1", features = ["support_rand", "support_heapsize", "support_serde"] }
ckb-core = { path = "../core" }
ckb-merkle-tree = { path = "../util/merkle-tree"}
failure = "0.1.5"
