[package]
name = "ckb-resource"
version.workspace = true
license = "MIT"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2024"
build = "build.rs"
description = "Bundled resources for the CKB binary."
homepage = "https://github.com/nervosnetwork/ckb"
repository = "https://github.com/nervosnetwork/ckb"

[dependencies]
phf.workspace = true
includedir.workspace = true
serde = { workspace = true, features = ["derive"] }
ckb-types.workspace = true
ckb-system-scripts.workspace = true

[build-dependencies]
includedir_codegen.workspace = true
walkdir.workspace = true
ckb-types.workspace = true
ckb-system-scripts.workspace = true

[dev-dependencies]
tempfile.workspace = true

[package.metadata.cargo-shear]
ignored = ["phf"]
