[package]
name = "ckb-resource"
version.workspace = true
license = "MIT"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2024"
build = "build.rs"
description = "Bundled resources for the CKB binary."
homepage = "https://github.com/nervosnetwork/ckb"
repository = "https://github.com/nervosnetwork/ckb"

[dependencies]
phf = "0.8.0" # ckb-resource's build script need this, and cargo shear think ckb don't need this
includedir.workspace = true
serde = { workspace = true, features = ["derive"] }
ckb-types.workspace = true
ckb-system-scripts-v0_5_4.workspace = true
ckb-system-scripts-v0_6_0.workspace = true

[build-dependencies]
includedir_codegen.workspace = true
walkdir.workspace = true
ckb-types.workspace = true
ckb-system-scripts-v0_5_4.workspace = true
ckb-system-scripts-v0_6_0.workspace = true

[dev-dependencies]
tempfile.workspace = true

[package.metadata.cargo-shear]
ignored = ["phf"]
