[package]
name = "ckb-rpc"
version = "0.120.0"
license = "MIT"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2021"
description = "CKB RPC server."
homepage = "https://github.com/nervosnetwork/ckb"
repository = "https://github.com/nervosnetwork/ckb"

[dependencies]
ckb-chain-spec = { path = "../spec", version = "= 0.120.0" }
ckb-types = { path = "../util/types", version = "= 0.120.0" }
ckb-network = { path = "../network", version = "= 0.120.0" }
ckb-notify = { path = "../notify", version = "= 0.120.0" }
ckb-shared = { path = "../shared", version = "= 0.120.0" }
ckb-store = { path = "../store", version = "= 0.120.0" }
ckb-sync = { path = "../sync", version = "= 0.120.0" }
ckb-chain = { path = "../chain", version = "= 0.120.0" }
ckb-logger = { path = "../util/logger", version = "= 0.120.0" }
ckb-logger-service = { path = "../util/logger-service", version = "= 0.120.0" }
ckb-network-alert = { path = "../util/network-alert", version = "= 0.120.0" }
ckb-app-config = { path = "../util/app-config", version = "= 0.120.0" }
ckb-constant = { path = "../util/constant", version = "= 0.120.0" }
jsonrpc-core = "18.0"
serde_json = "1.0"
jsonrpc-utils = { version = "0.3", features = ["server", "macros", "axum"] }
ckb-jsonrpc-types = { path = "../util/jsonrpc-types", version = "= 0.120.0" }
ckb-verification = { path = "../verification", version = "= 0.120.0" }
ckb-verification-traits = { path = "../verification/traits", version = "= 0.120.0" }
ckb-traits = { path = "../traits", version = "= 0.120.0" }
ckb-util = { path = "../util", version = "= 0.120.0" }
ckb-systemtime = { path = "../util/systemtime", version = "= 0.120.0" }
ckb-dao = { path = "../util/dao", version = "= 0.120.0" }
ckb-error = { path = "../error", version = "= 0.120.0" }
ckb-reward-calculator = { path = "../util/reward-calculator", version = "= 0.120.0" }
ckb-tx-pool = { path = "../tx-pool", version = "= 0.120.0" }
ckb-memory-tracker = { path = "../util/memory-tracker", version = "= 0.120.0" }
ckb-pow = { path = "../pow", version = "= 0.120.0" }
ckb-indexer = { path = "../util/indexer", version = "= 0.120.0" }
ckb-indexer-sync = { path = "../util/indexer-sync", version = "= 0.120.0" }
ckb-rich-indexer = { path = "../util/rich-indexer", version = "= 0.120.0" }
ckb-stop-handler = { path = "../util/stop-handler", version = "= 0.120.0" }
itertools.workspace = true
tokio = "1"
async-trait = "0.1"
axum = "0.7"
tokio-util = { version = "0.7.3", features = ["codec"] }
futures-util = { version = "0.3.21" }
tower-http = { version = "0.6", features = ["timeout", "cors"] }
async-stream = "0.3.3"
ckb-async-runtime = { path = "../util/runtime", version = "= 0.120.0" }
# issue tracking: https://github.com/GREsau/schemars/pull/251
schemars = { version = "0.8.19", package = "ckb_schemars" }

[dev-dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
ckb-shared = { path = "../shared", version = "= 0.120.0" }
ckb-test-chain-utils = { path = "../util/test-chain-utils", version = "= 0.120.0" }
tempfile.workspace = true
pretty_assertions = "1.3.0"
ckb-dao-utils = { path = "../util/dao/utils", version = "= 0.120.0" }
