[package]
name = "ckb-script"
version = "0.121.0"
license = "MIT"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2021"
build = "build.rs"
description = "CKB component to run the type/lock scripts."
homepage = "https://github.com/nervosnetwork/ckb"
repository = "https://github.com/nervosnetwork/ckb"

[features]
default = ["logging", "detect-asm"]

asm = ["ckb-vm/asm"]
detect-asm = ["ckb-vm/detect-asm"]
logging = ["ckb-logger"]
flatmemory = []

[dependencies]
ckb-traits = { path = "../traits", version = "= 0.121.0" }
byteorder = "1.3.1"
ckb-types = { path = "../util/types", version = "= 0.121.0" }
ckb-hash = { path = "../util/hash", version = "= 0.121.0" }
ckb-vm = { version = "= 0.24.12", default-features = false }
faster-hex = "0.6"
ckb-logger = { path = "../util/logger", version = "= 0.121.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
ckb-error = { path = "../error", version = "= 0.121.0" }
ckb-chain-spec = { path = "../spec", version = "= 0.121.0" }
tokio = { version = "1.35.0", features = ["sync", "macros"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { version = "1.35.0", features = ["rt-multi-thread"] }

[dev-dependencies]
proptest = "1.0"
ckb-db = { path = "../db", version = "= 0.121.0" }
ckb-store = { path = "../store", version = "= 0.121.0" }
ckb-test-chain-utils = { path = "../util/test-chain-utils", version = "= 0.121.0" }
tiny-keccak = { version = "2.0", features = ["sha3"] }
ckb-crypto = { path = "../util/crypto", version = "= 0.121.0" }
ckb-db-schema = { path = "../db-schema", version = "= 0.121.0" }
tempfile.workspace = true
rand = "0.8.4"
daggy = "0.8.0"
molecule = "0.8.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(has_asm)'] }
