[package]
name = "ckb-shared"
version = "0.111.0-rc5"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2021"
license = "MIT"
description = "TODO(doc): @quake crate description"
homepage = "https://github.com/nervosnetwork/ckb"
repository = "https://github.com/nervosnetwork/ckb"

[dependencies]
ckb-types = { path = "../util/types", version = "= 0.111.0-rc5" }
ckb-chain-spec = { path = "../spec", version = "= 0.111.0-rc5" }
ckb-store = { path = "../store", version = "= 0.111.0-rc5" }
ckb-db = { path = "../db", version = "= 0.111.0-rc5" }
ckb-proposal-table = { path = "../util/proposal-table", version = "= 0.111.0-rc5" }
arc-swap = "1.3"
ckb-error = { path = "../error", version = "= 0.111.0-rc5" }
ckb-snapshot = { path = "../util/snapshot", version = "= 0.111.0-rc5" }
ckb-tx-pool = { path = "../tx-pool", version = "= 0.111.0-rc5" }
ckb-verification = { path = "../verification", version = "= 0.111.0-rc5" }
ckb-notify = { path = "../notify", version = "= 0.111.0-rc5" }
ckb-logger = { path = "../util/logger", version = "= 0.111.0-rc5" }
ckb-db-schema = { path = "../db-schema", version = "= 0.111.0-rc5" }
ckb-async-runtime = { path = "../util/runtime", version = "= 0.111.0-rc5" }
ckb-stop-handler = { path = "../util/stop-handler", version = "= 0.111.0-rc5" }
ckb-channel = { path = "../util/channel", version = "= 0.111.0-rc5" }
ckb-constant = { path = "../util/constant", version = "= 0.111.0-rc5" }
ckb-systemtime = { path = "../util/systemtime", version = "= 0.111.0-rc5" }

[dev-dependencies]
ckb-systemtime = { path = "../util/systemtime", version = "= 0.111.0-rc5", features = ["enable_faketime"] }

[features]
portable = ["ckb-db/portable", "ckb-store/portable", "ckb-tx-pool/portable"]
march-native = ["ckb-db/march-native", "ckb-store/march-native", "ckb-tx-pool/march-native"]
