[package]
name = "ckb-shared"
version = "0.114.0-pre"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2021"
license = "MIT"
description = "TODO(doc): @quake crate description"
homepage = "https://github.com/nervosnetwork/ckb"
repository = "https://github.com/nervosnetwork/ckb"

[dependencies]
ckb-types = { path = "../util/types", version = "= 0.114.0-pre" }
ckb-chain-spec = { path = "../spec", version = "= 0.114.0-pre" }
ckb-store = { path = "../store", version = "= 0.114.0-pre" }
ckb-db = { path = "../db", version = "= 0.114.0-pre" }
ckb-proposal-table = { path = "../util/proposal-table", version = "= 0.114.0-pre" }
arc-swap = "1.3"
ckb-error = { path = "../error", version = "= 0.114.0-pre" }
ckb-snapshot = { path = "../util/snapshot", version = "= 0.114.0-pre" }
ckb-tx-pool = { path = "../tx-pool", version = "= 0.114.0-pre" }
ckb-verification = { path = "../verification", version = "= 0.114.0-pre" }
ckb-notify = { path = "../notify", version = "= 0.114.0-pre" }
ckb-logger = { path = "../util/logger", version = "= 0.114.0-pre" }
ckb-db-schema = { path = "../db-schema", version = "= 0.114.0-pre" }
ckb-async-runtime = { path = "../util/runtime", version = "= 0.114.0-pre" }
ckb-stop-handler = { path = "../util/stop-handler", version = "= 0.114.0-pre" }
ckb-constant = { path = "../util/constant", version = "= 0.114.0-pre" }
ckb-systemtime = { path = "../util/systemtime", version = "= 0.114.0-pre" }
ckb-channel = { path = "../util/channel", version = "= 0.114.0-pre" }
ckb-app-config = {path = "../util/app-config", version = "= 0.114.0-pre"}
ckb-migrate = { path = "../util/migrate", version = "= 0.114.0-pre" }
once_cell = "1.8.0"
ckb-network = { path = "../network", version = "= 0.114.0-pre" }
ckb-util = { path = "../util", version = "= 0.114.0-pre" }
bitflags = "1.0"
tokio = { version = "1", features = ["sync"] }
tempfile.workspace = true
sled = "0.34.7"
dashmap = "4.0"

[dev-dependencies]
ckb-systemtime = { path = "../util/systemtime", version = "= 0.114.0-pre", features = ["enable_faketime"] }

[features]
portable = ["ckb-db/portable", "ckb-store/portable", "ckb-tx-pool/portable", "ckb-migrate/portable"]
march-native = ["ckb-db/march-native", "ckb-store/march-native", "ckb-tx-pool/march-native", "ckb-migrate/march-native"]
stats = []
