[package]
name = "ckb-chain-spec"
version = "0.111.0-rc6"
license = "MIT"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2021"
description = "The CKB block chain specification"
homepage = "https://github.com/nervosnetwork/ckb"
repository = "https://github.com/nervosnetwork/ckb"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
ckb-constant = { path = "../util/constant", version = "= 0.111.0-rc6" }
ckb-types = { path = "../util/types", version = "= 0.111.0-rc6" }
ckb-pow = { path = "../pow", version = "= 0.111.0-rc6" }
ckb-resource = { path = "../resource", version = "= 0.111.0-rc6" }
ckb-jsonrpc-types = { path = "../util/jsonrpc-types", version = "= 0.111.0-rc6" }
ckb-dao-utils = { path = "../util/dao/utils", version = "= 0.111.0-rc6" }
ckb-rational = { path = "../util/rational", version = "= 0.111.0-rc6" }
ckb-crypto = { path = "../util/crypto", version = "= 0.111.0-rc6"}
ckb-hash = { path = "../util/hash", version = "= 0.111.0-rc6"}
ckb-error = { path = "../error", version = "= 0.111.0-rc6" }
ckb-traits = { path = "../traits", version = "= 0.111.0-rc6" }
ckb-util = { path = "../util", version = "= 0.111.0-rc6" }
