[package]
name = "ckb-chain-spec"
version = "0.120.0-rc3"
license = "MIT"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2021"
description = "The CKB block chain specification"
homepage = "https://github.com/nervosnetwork/ckb"
repository = "https://github.com/nervosnetwork/ckb"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
ckb-constant = { path = "../util/constant", version = "= 0.120.0-rc3" }
ckb-types = { path = "../util/types", version = "= 0.120.0-rc3" }
ckb-pow = { path = "../pow", version = "= 0.120.0-rc3" }
ckb-resource = { path = "../resource", version = "= 0.120.0-rc3" }
ckb-jsonrpc-types = { path = "../util/jsonrpc-types", version = "= 0.120.0-rc3" }
ckb-dao-utils = { path = "../util/dao/utils", version = "= 0.120.0-rc3" }
ckb-rational = { path = "../util/rational", version = "= 0.120.0-rc3" }
ckb-crypto = { path = "../util/crypto", version = "= 0.120.0-rc3" }
ckb-hash = { path = "../util/hash", version = "= 0.120.0-rc3" }
ckb-error = { path = "../error", version = "= 0.120.0-rc3" }
ckb-traits = { path = "../traits", version = "= 0.120.0-rc3" }
ckb-logger = { path = "../util/logger", version = "= 0.120.0-rc3" }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
cacache = { version = "13.0.0", default-features = false, features = ["mmap"] }

[dev-dependencies]
tempfile.workspace = true
