[package]
name = "ckb-store"
version = "0.109.0-rc3"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2021"
license = "MIT"
description = "TODO(doc): @quake crate description"
homepage = "https://github.com/nervosnetwork/ckb"
repository = "https://github.com/nervosnetwork/ckb"

[dependencies]
ckb-types = { path = "../util/types", version = "= 0.109.0-rc3" }
ckb-db = { path = "../db", version = "= 0.109.0-rc3" }
ckb-chain-spec = { path = "../spec", version = "= 0.109.0-rc3" }
lru = "0.7.1"
ckb-traits = { path = "../traits", version = "= 0.109.0-rc3" }
ckb-util = { path = "../util", version = "= 0.109.0-rc3" }
ckb-error = { path = "../error", version = "= 0.109.0-rc3" }
ckb-app-config = { path = "../util/app-config", version = "= 0.109.0-rc3" }
ckb-db-schema = { path = "../db-schema", version = "= 0.109.0-rc3" }
ckb-freezer = { path = "../freezer", version = "= 0.109.0-rc3" }
ckb-merkle-mountain-range = "0.5.2"

[dev-dependencies]
tempfile.workspace = true

[features]
portable = ["ckb-db/portable"]
march-native = ["ckb-db/march-native"]
