[package]
name = "ckb-store"
version = "1.0.3"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2024"
license = "MIT"
description = "ckb chain related persistent implementation"
homepage = "https://github.com/nervosnetwork/ckb"
repository = "https://github.com/nervosnetwork/ckb"

[dependencies]
ckb-types.workspace = true
ckb-db.workspace = true
ckb-chain-spec.workspace = true
lru.workspace = true
ckb-traits.workspace = true
ckb-util.workspace = true
ckb-error.workspace = true
ckb-app-config.workspace = true
ckb-db-schema.workspace = true
ckb-freezer.workspace = true
ckb-merkle-mountain-range.workspace = true

[dev-dependencies]
tempfile.workspace = true

[features]
portable = ["ckb-db/portable"]
march-native = ["ckb-db/march-native"]
