[package]
name = "ckb-test"
version = "0.202.0"
license = "MIT"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2024"
description = "CKB integration tests."
homepage = "https://github.com/nervosnetwork/ckb"
repository = "https://github.com/nervosnetwork/ckb"

[dependencies]
clap = { version = "4" }
toml = "0.5.0"
ckb-jsonrpc-types = { path = "../util/jsonrpc-types" }
ckb-app-config = { path = "../util/app-config" }
ckb-network = { path = "../network" }
ckb-channel = { path = "../util/channel" }
ckb-types = { path = "../util/types" }
ckb-hash = { path = "../util/hash" }
ckb-util = { path = "../util" }
ckb-chain-spec = { path = "../spec" }
ckb-crypto = { path = "../util/crypto" }
ckb-dao-utils = { path = "../util/dao/utils" }
ckb-test-chain-utils = { path = "../util/test-chain-utils" }
ckb-resource = { path = "../resource" }
ckb-async-runtime = { path = "../util/runtime" }
ckb-logger = { path = "../util/logger" }
ckb-logger-config = { path = "../util/logger-config" }
ckb-logger-service = { path = "../util/logger-service" }
ckb-error = { path = "../error" }
ckb-constant = { path = "../util/constant" }
ckb-db = { path = "../db" }
ckb-store = { path = "../store" }
ckb-shared = { path = "../shared" }
tempfile = "3"
reqwest = { version = "0.12", features = ["blocking", "json"] }
rand = "0.8"
ckb-systemtime = { path = "../util/systemtime" }
serde_json = "1.0"
byteorder = "1.3.1"
jsonrpc-core = "18.0"
ctrlc = { version = "3.1", features = ["termination"] }
log = "0.4"

[target.'cfg(not(target_os="windows"))'.dependencies]
nix = { version = "0.29.0", default-features = false, features = ["signal"] }

[target.'cfg(target_os="windows")'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_Console",
] }

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release.build-override]
opt-level = 3

[profile.bench.build-override]
opt-level = 3

[features]
default = []
deadlock_detection = ["ckb-util/deadlock_detection"]
