[package]
name = "ckb-traits"
version = "1.0.2"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2024"
license = "MIT"
description = "Common traits for accessing blockchain data"
homepage = "https://github.com/nervosnetwork/ckb"
repository = "https://github.com/nervosnetwork/ckb"

[dependencies]
ckb-types.workspace = true
